parse/lex.go
// Code generated by Ragel from lex.rl. DO NOT EDIT.
//
//line lex.rl:1
package parse

import (
	"strconv"
)

//line lex.go:12
const biscript_start int = 11
const biscript_first_final int = 11
const biscript_error int = 0

const biscript_en_main int = 11

//line lex.rl:14

func newLexer(data []byte) *lexer {
	lex := &lexer{
		data: data,
		pe:   len(data),
	}

//line lex.go:29
	{
		lex.cs = biscript_start
		lex.ts = 0
		lex.te = 0
		lex.act = 0
	}

//line lex.rl:22
	return lex
}

func (lex *lexer) Lex(out *yySymType) int {
	eof := lex.pe
	tok := 0

//line lex.go:45
	{
		if (lex.p) == (lex.pe) {
			goto _test_eof
		}
		switch lex.cs {
		case 11:
			goto st_case_11
		case 0:
			goto st_case_0
		case 1:
			goto st_case_1
		case 2:
			goto st_case_2
		case 3:
			goto st_case_3
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 6:
			goto st_case_6
		case 7:
			goto st_case_7
		case 12:
			goto st_case_12
		case 8:
			goto st_case_8
		case 13:
			goto st_case_13
		case 14:
			goto st_case_14
		case 9:
			goto st_case_9
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 10:
			goto st_case_10
		case 20:
			goto st_case_20
		}
		goto st_out
	tr1:
//line lex.rl:40
		lex.te = (lex.p) + 1
		{
			if lex.te-lex.ts > 2 {
				out.stringValue = string(lex.data[lex.ts+1 : lex.te-1])
			} else {
				out.stringValue = ""
			}
			tok = STRING
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr8:
//line lex.rl:30
		lex.te = (lex.p) + 1
		{
			tok = TOK_DEFINE
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr9:
//line lex.rl:63
		(lex.p) = (lex.te) - 1
		{
			n, err := strconv.Atoi(string(lex.data[lex.ts:lex.te]))
			if err != nil {
				panic(err)
			}
			out.integerValue = n
			tok = INTEGER
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr11:
//line lex.rl:39
		lex.te = (lex.p) + 1
		{
			tok = TOK_ARRAY
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr12:
//line lex.rl:49
		(lex.p) = (lex.te) - 1
		{
			out.identifier = string(lex.data[lex.ts:lex.te])
			tok = IDENTIFIER
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr14:
//line lex.rl:78
		lex.te = (lex.p) + 1

		goto st11
	tr16:
//line lex.rl:73
		lex.te = (lex.p) + 1
		{
			tok = TOK_COMMA
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr18:
//line lex.rl:76
		lex.te = (lex.p) + 1
		{
			tok = TOK_COLON
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr19:
//line lex.rl:77
		lex.te = (lex.p) + 1
		{
			tok = TOK_SEMICOLON
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr20:
//line lex.rl:72
		lex.te = (lex.p) + 1
		{
			tok = TOK_ASSIGN
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr24:
//line lex.rl:74
		lex.te = (lex.p) + 1
		{
			tok = TOK_BLOCK_OPEN
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr25:
//line lex.rl:75
		lex.te = (lex.p) + 1
		{
			tok = TOK_BLOCK_CLOSE
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr26:
//line lex.rl:63
		lex.te = (lex.p)
		(lex.p)--
		{
			n, err := strconv.Atoi(string(lex.data[lex.ts:lex.te]))
			if err != nil {
				panic(err)
			}
			out.integerValue = n
			tok = INTEGER
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr28:
//line lex.rl:54
		lex.te = (lex.p)
		(lex.p)--
		{
			n, err := strconv.ParseFloat(string(lex.data[lex.ts:lex.te]), 64)
			if err != nil {
				panic(err)
			}
			out.floatValue = n
			tok = FLOAT
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr29:
//line lex.rl:49
		lex.te = (lex.p)
		(lex.p)--
		{
			out.identifier = string(lex.data[lex.ts:lex.te])
			tok = IDENTIFIER
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	tr35:
//line lex.rl:34
		lex.te = (lex.p)
		(lex.p)--
		{
			tok = CLASS
			out.identifier = string(lex.data[lex.ts+6 : lex.te])
			{
				(lex.p)++
				lex.cs = 11
				goto _out
			}
		}
		goto st11
	st11:
//line NONE:1
		lex.ts = 0

		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof11
		}
	st_case_11:
//line NONE:1
		lex.ts = (lex.p)

//line lex.go:237
		switch lex.data[(lex.p)] {
		case 32:
			goto tr14
		case 34:
			goto st1
		case 35:
			goto st2
		case 44:
			goto tr16
		case 58:
			goto tr18
		case 59:
			goto tr19
		case 61:
			goto tr20
		case 91:
			goto st9
		case 99:
			goto st15
		case 123:
			goto tr24
		case 125:
			goto tr25
		}
		switch {
		case lex.data[(lex.p)] < 48:
			if 9 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 13 {
				goto tr14
			}
		case lex.data[(lex.p)] > 57:
			switch {
			case lex.data[(lex.p)] > 90:
				if 97 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 122 {
					goto st14
				}
			case lex.data[(lex.p)] >= 65:
				goto st14
			}
		default:
			goto tr17
		}
		goto st0
	st_case_0:
	st0:
		lex.cs = 0
		goto _out
	st1:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof1
		}
	st_case_1:
		if lex.data[(lex.p)] == 34 {
			goto tr1
		}
		goto st1
	st2:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof2
		}
	st_case_2:
		if lex.data[(lex.p)] == 100 {
			goto st3
		}
		goto st0
	st3:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof3
		}
	st_case_3:
		if lex.data[(lex.p)] == 101 {
			goto st4
		}
		goto st0
	st4:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof4
		}
	st_case_4:
		if lex.data[(lex.p)] == 102 {
			goto st5
		}
		goto st0
	st5:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof5
		}
	st_case_5:
		if lex.data[(lex.p)] == 105 {
			goto st6
		}
		goto st0
	st6:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof6
		}
	st_case_6:
		if lex.data[(lex.p)] == 110 {
			goto st7
		}
		goto st0
	st7:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof7
		}
	st_case_7:
		if lex.data[(lex.p)] == 101 {
			goto tr8
		}
		goto st0
	tr17:
//line NONE:1
		lex.te = (lex.p) + 1

		goto st12
	st12:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof12
		}
	st_case_12:
//line lex.go:357
		if lex.data[(lex.p)] == 46 {
			goto st8
		}
		if 48 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 57 {
			goto tr17
		}
		goto tr26
	st8:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof8
		}
	st_case_8:
		if 48 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 57 {
			goto st13
		}
		goto tr9
	st13:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof13
		}
	st_case_13:
		if 48 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 57 {
			goto st13
		}
		goto tr28
	st14:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof14
		}
	st_case_14:
		switch {
		case lex.data[(lex.p)] > 90:
			if 97 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 122 {
				goto st14
			}
		case lex.data[(lex.p)] >= 65:
			goto st14
		}
		goto tr29
	st9:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof9
		}
	st_case_9:
		if lex.data[(lex.p)] == 93 {
			goto tr11
		}
		goto st0
	st15:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof15
		}
	st_case_15:
		if lex.data[(lex.p)] == 108 {
			goto st16
		}
		switch {
		case lex.data[(lex.p)] > 90:
			if 97 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 122 {
				goto st14
			}
		case lex.data[(lex.p)] >= 65:
			goto st14
		}
		goto tr29
	st16:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof16
		}
	st_case_16:
		if lex.data[(lex.p)] == 97 {
			goto st17
		}
		switch {
		case lex.data[(lex.p)] > 90:
			if 98 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 122 {
				goto st14
			}
		case lex.data[(lex.p)] >= 65:
			goto st14
		}
		goto tr29
	st17:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof17
		}
	st_case_17:
		if lex.data[(lex.p)] == 115 {
			goto st18
		}
		switch {
		case lex.data[(lex.p)] > 90:
			if 97 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 122 {
				goto st14
			}
		case lex.data[(lex.p)] >= 65:
			goto st14
		}
		goto tr29
	st18:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof18
		}
	st_case_18:
		if lex.data[(lex.p)] == 115 {
			goto tr33
		}
		switch {
		case lex.data[(lex.p)] > 90:
			if 97 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 122 {
				goto st14
			}
		case lex.data[(lex.p)] >= 65:
			goto st14
		}
		goto tr29
	tr33:
//line NONE:1
		lex.te = (lex.p) + 1

		goto st19
	st19:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof19
		}
	st_case_19:
//line lex.go:484
		if lex.data[(lex.p)] == 32 {
			goto st10
		}
		switch {
		case lex.data[(lex.p)] > 90:
			if 97 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 122 {
				goto st14
			}
		case lex.data[(lex.p)] >= 65:
			goto st14
		}
		goto tr29
	st10:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof10
		}
	st_case_10:
		switch {
		case lex.data[(lex.p)] < 65:
			if 48 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 57 {
				goto st20
			}
		case lex.data[(lex.p)] > 90:
			if 97 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 122 {
				goto st20
			}
		default:
			goto st20
		}
		goto tr12
	st20:
		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof20
		}
	st_case_20:
		switch {
		case lex.data[(lex.p)] < 65:
			if 48 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 57 {
				goto st20
			}
		case lex.data[(lex.p)] > 90:
			if 97 <= lex.data[(lex.p)] && lex.data[(lex.p)] <= 122 {
				goto st20
			}
		default:
			goto st20
		}
		goto tr35
	st_out:
	_test_eof11:
		lex.cs = 11
		goto _test_eof
	_test_eof1:
		lex.cs = 1
		goto _test_eof
	_test_eof2:
		lex.cs = 2
		goto _test_eof
	_test_eof3:
		lex.cs = 3
		goto _test_eof
	_test_eof4:
		lex.cs = 4
		goto _test_eof
	_test_eof5:
		lex.cs = 5
		goto _test_eof
	_test_eof6:
		lex.cs = 6
		goto _test_eof
	_test_eof7:
		lex.cs = 7
		goto _test_eof
	_test_eof12:
		lex.cs = 12
		goto _test_eof
	_test_eof8:
		lex.cs = 8
		goto _test_eof
	_test_eof13:
		lex.cs = 13
		goto _test_eof
	_test_eof14:
		lex.cs = 14
		goto _test_eof
	_test_eof9:
		lex.cs = 9
		goto _test_eof
	_test_eof15:
		lex.cs = 15
		goto _test_eof
	_test_eof16:
		lex.cs = 16
		goto _test_eof
	_test_eof17:
		lex.cs = 17
		goto _test_eof
	_test_eof18:
		lex.cs = 18
		goto _test_eof
	_test_eof19:
		lex.cs = 19
		goto _test_eof
	_test_eof10:
		lex.cs = 10
		goto _test_eof
	_test_eof20:
		lex.cs = 20
		goto _test_eof

	_test_eof:
		{
		}
		if (lex.p) == eof {
			switch lex.cs {
			case 12:
				goto tr26
			case 8:
				goto tr9
			case 13:
				goto tr28
			case 14:
				goto tr29
			case 15:
				goto tr29
			case 16:
				goto tr29
			case 17:
				goto tr29
			case 18:
				goto tr29
			case 19:
				goto tr29
			case 10:
				goto tr12
			case 20:
				goto tr35
			}
		}

	_out:
		{
		}
	}

//line lex.rl:82

	return tok
}
